# factfiber-ai-docs

./: .dockerignore  .env.example  .env.oauth2-proxy.example  .gitignore  .markdownlint.yaml  .pre-commit-config-fast.yaml  .pre-commit-config-full.yaml  .pre-commit-config-optimized.yaml  .pre-commit-config.yaml  .yamllint  .yamllint.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  devspace-profiles.yaml  devspace.yaml  factfiber-ai-docs.code-workspace  k8s-oauth2-proxy.yaml  mkdocs-unified.yml  mkdocs.yml  oauth2-proxy-config.yaml  pyproject-old.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-aws.yml  deploy-docs.yml  deploy-staging.yml  docs.yml  terraform.yml
aws/docs/: github-oauth-setup.md  migration-guide.md  operations-runbook.md  setup-guide.md  testing-checklist.md
aws/iam/: assume-role-policy.json  factfiber-docs-infra-policy.json  infrastructure-role-policy.json  infrastructure-trust-policy.json  route53-policy.json
aws/lambda/auth/: index.js
aws/scripts/: configure-aws-profile.sh  create-dynamodb-table.sh  create-ssm-parameters.sh  deploy.sh  setup-infrastructure-role.sh  setup-route53-cross-account.sh  setup-route53-dns.sh  setup.sh  test-route53-access.sh  update-infrastructure-role-permissions.sh
aws/terraform/: versions.tf
aws/terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
aws/terraform/environments/prod/: main.tf  terraform.tfvars.example  variables.tf
aws/terraform/modules/cloudfront/: main.tf  outputs.tf  variables.tf
aws/terraform/modules/iam/: main.tf  variables.tf
aws/terraform/modules/lambda-edge/: main.tf  outputs.tf  variables.tf
aws/terraform/modules/lambda-edge-config/: main.tf  outputs.tf  variables.tf
aws/terraform/modules/lambda-edge-config/templates/: config.js.tpl
aws/terraform/modules/route53/: main.tf  outputs.tf  variables.tf
aws/terraform/modules/route53-cross-account/: main.tf  variables.tf
aws/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
docs/: doc-server-preliminary-plan.md  index.md  oauth2-proxy-setup.md
docs/api/: index.md
docs/deployment/: ci-cd-setup.md
docs/dev/: architecture.md  contributing.md  devspace-guide.md  getting-started.md  linting-optimization.md
docs/guide/: architecture.md  cicd-infrastructure.md  development.md  documentation_organization.md  documentation_standards.md  getting-started.md  index.md  pdoc-standards.md  repository_onboarding.md
docs/guide/templates/: github-workflows-docs.yml  mkdocs.yml  pyproject-docs.toml
docs/infrastructure/: index.md
docs/infrastructure/aws/: README.md  acm-certificate-setup.md
docs/infrastructure/terraform/: index.md
docs/projects/: index.md
docs/reference/: index.md
docs/reference/code/: ff_docs.html  index.html  search.js
docs/reference/code/ff_docs/: aggregator.html  auth.html  cli.html  config.html  pipeline.html  search.html  server.html  utils.html
docs/reference/code/ff_docs/config/: settings.html
docs/reference/code/ff_docs/pipeline/: config_generator.html  pdoc_integration.html  rewriter.html  sync.html
docs/reference/code/ff_docs/search/: security_filter.html
docs/reference/code/ff_docs/server/: main.html  routes.html
docs/reference/code/ff_docs/server/routes/: auth.html  docs.html  health.html  repos.html  webhooks.html
docs/reference/components/ff_docs/: index.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  nginx.conf  package.json  tsconfig.json
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: Layout.tsx  LoadingScreen.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Repositories.tsx  Search.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts  index.ts
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  oauth2-proxy-deployment.yaml  oauth2-proxy-service.yaml  secret.yaml  service.yaml
kubernetes/: README.md
kubernetes/docker/: Dockerfile
kubernetes/manifests/: configmap.yaml  deployment.yaml  secret.yaml
kubernetes/oauth2-proxy/: docker-compose.oauth2-proxy.yml  oauth2-proxy-deployment.yaml  oauth2-proxy-service.yaml
scripts/: check_copyright.py  deploy-github-secrets.sh  mkdocs-incremental-check.py  run-mkdocs-incremental.sh  setup-oauth2-proxy.sh  test-oauth2-proxy-auth.sh  update-private-repo-token.sh
src/ff_docs/: __init__.py  cli.py
src/ff_docs/aggregator/: __init__.py  enrollment.py  github_client.py
src/ff_docs/auth/: __init__.py  github_auth.py  jwt_handler.py  middleware.py  models.py  oauth2_proxy.py  repository_middleware.py  repository_permissions.py
src/ff_docs/config/: __init__.py  settings.py
src/ff_docs/pipeline/: __init__.py  config_generator.py  pdoc_integration.py  rewriter.py  sync.py
src/ff_docs/search/: __init__.py  security_filter.py
src/ff_docs/server/: __init__.py  main.py
src/ff_docs/server/routes/: __init__.py  auth.py  docs.py  health.py  repos.py  webhooks.py
src/ff_docs/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_health.py
tests/unit/aggregator/: test_enrollment.py  test_github_client.py
tests/unit/auth/: test_github_auth.py  test_jwt_handler.py  test_middleware.py  test_models.py  test_oauth2_proxy.py  test_repository_middleware.py  test_repository_permissions.py
tests/unit/config/: __init__.py  test_settings.py
tests/unit/pipeline/: test_config_generator.py  test_pdoc_integration.py  test_rewriter.py  test_sync.py
tests/unit/search/: test_security_filter.py
tests/unit/server/: test_main.py
tests/unit/server/routes/: test_auth.py  test_docs.py  test_repos.py  test_webhooks.py
